--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -11,49 +11,72 @@
 			src="https://pbs.twimg.com/profile_images/716487122224439296/HWPluyjs.jpg" />
 		<md-card-header>
 		<h4
-			style="width: 100%; text-align: center; margin-left: -20px; word-wrap: break-word">{{user?.firstName}}&nbsp;{{user?.middleName}}&nbsp;{{user?.lastName}}</h4>
+			style="width: 100%; text-align: center; margin-left: -20px; word-wrap: break-word">{{employee?.firstName}}&nbsp;{{employee?.middleName}}&nbsp;{{employee?.lastName}}</h4>
 		</md-card-header>
 		<h5 style="word-wrap: break-word">
 			<small>Designation: </small>
-			{{user?.designation}}
+			{{employee?.designation}}
 		</h5>
-		<h5 style="word-wrap: break-word">
+		<h5 style="word-wrap: break-word" *ngIf="department">
+			<small>Department: </small>
+			{{department['deptName']}}
+		</h5>
+		<h5
+			style="word-wrap: break-word"
+			*ngIf="user && user['genderVisible']===1">
 			<small>Gender: </small>
-			{{gender[+user?.gender]}}
+			{{gender[+employee?.gender]}}
 		</h5>
-		<h5 style="word-wrap: break-word">
+		<h5
+			style="word-wrap: break-word"
+			*ngIf="user && user['dobVisible']===1">
 			<small>DOB: </small>
-			{{user?.dob | date:"dd-MMM-yyyy"}}
+			{{employee?.dob | date:"dd-MMM-yyyy"}}
 		</h5>
 		<h5 style="word-wrap: break-word">
 			<small>Joined on: </small>
-			{{user?.joiningDate | date:"dd-MMM-yyyy"}}
+			{{employee?.joiningDate | date:"dd-MMM-yyyy"}}
 		</h5>
 		<h5
 			style="word-wrap: break-word"
-			*ngIf="user?.leavingDate">
+			*ngIf="employee?.leavingDate">
 			<small>Left on: </small>
-			{{user?.leavingDate | date:"dd-MMM-yyyy"}}
+			{{employee?.leavingDate | date:"dd-MMM-yyyy"}}
 		</h5>
 		<h5 style="word-wrap: break-word">
 			<small>Phone: </small>
-			{{user?.phoneNumber}}
+			{{employee?.phoneNumber}}
 		</h5>
 		<h5
 			style="word-wrap: break-word"
-			*ngIf="user?.addresses[0]">
+			*ngIf="employee?.addresses[0]">
 			<small>Address: </small>
-			<p>{{user?.addresses[0].line1}}, {{user?.addresses[0].line2}},
-				{{user?.addresses[0].city}}-{{user?.addresses[0].pincode}},
-				{{user?.addresses[0].state}}, {{user?.addresses[0].country}}</p>
+			<p>{{employee?.addresses[0].line1}},
+				{{employee?.addresses[0].line2}},
+				{{employee?.addresses[0].city}}-{{employee?.addresses[0].pincode}},
+				{{employee?.addresses[0].state}}, {{employee?.addresses[0].country}}</p>
 		</h5>
 		<br />
 		<div *ngIf="projects[0]">
 			<h5 style="word-wrap: break-word">
 				<b>Projects:</b>
 			</h5>
-			<ul>
-				<li *ngFor="let project of projects"></li>
+			<ul style="list-style-type: none; padding-left: 0px; cursor: pointer">
+				<li *ngFor="let project of projects">
+					<a>{{project['title']}}</a>
+				</li>
+			</ul>
+		</div>
+
+		<br />
+		<div *ngIf="clients[0]">
+			<h5 style="word-wrap: break-word">
+				<b>Clients:</b>
+			</h5>
+			<ul style="list-style-type: none; padding-left: 0px; cursor: pointer">
+				<li *ngFor="let client of clients">
+					<a>{{client['name']}}</a>
+				</li>
 			</ul>
 		</div>
 	</div>
